--- a/recently.html
+++ b/recently.html
@@ -38,7 +38,7 @@
 	
 	<main>	
 	<div class="大会">
-			<p>6月の中旬辺りに、スマブラの大会に行ってきました。</p>
+			<p>2022年6月の中旬辺りに、スマブラの大会に行ってきました。</p>
 			<p>会場は、東大阪花園ラグビー場、、、</p>
 			<p>ラグビー場！？</p>
 			<p class="monitor-point">↓ここで試合が映ってた</p>
